--- a/integradora/styles/style.css
+++ b/integradora/styles/style.css
@@ -1,4 +1,65 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 body {
     background: rgb(139,36,55);
-background: linear-gradient(339deg, rgba(139,36,55,1) 0%, rgba(200,80,42,1) 53%, rgba(249,210,121,1) 100%);
+    background: linear-gradient(339deg, rgba(139,36,55,1) 0%, rgba(200,80,42,1) 53%, rgba(249,210,121,1) 100%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+form {
+    width: 30%;
+    height: 30vh;
+    background-color: white;
+    border-radius: 2%;
+    margin: auto;
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+
+
+    /*          DE AQUI PA ARRIBA NO SE QUE HIZO EL GEOVANY                 */
+
+
+
+
+/* modificacion del estilo */
+.fuente{
+    color: #8b2437;
+    align-items: center;
+    text-align: center;
+
+}
+/* estilo del el usuario y contraseña */
+.sesion{
+  border: none;
+  border-bottom: 2px solid black;
+  border-color: #8b2437;
+}
+
+/* estilo del texto de ayuda para el usuario */
+input::placeholder{
+    color: #8b2437;
+   
+}
+/* estilo de lo botones */
+.boton {
+    background-color: #8b2437;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    margin-top: 20%;
+    
+}
+
+/* estilo del boton ingresar */
+}
+input, .boton {
+    height: 5vh;
+    margin-top: 2%;
 }
