--- a/integradora/styles/style.css
+++ b/integradora/styles/style.css
@@ -1,3 +1,15 @@
+:root {
+    --color-primary: #8B2437;
+    --color-secondary: #F37022;
+    --color-white: #FFFFFF;
+    --color-accent: #F9D279;
+    --color-danger: #C8502A;
+    --color-gray-dark: #4A4A4A;
+    --color-background: #F2E4D6;
+    --color-brown: #A65C3D;
+    --color-black: #000000;
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -14,23 +26,19 @@ body {
 }
 form {
     width: 30%;
-    height: 30vh;
-    background-color: white;
+    height: auto;
+    background-color: var(--color-white);
     border-radius: 2%;
     margin: auto;
     padding: 2%;
     display: flex;
     flex-direction: column;
-
-
-    /*          DE AQUI PA ARRIBA NO SE QUE HIZO EL GEOVANY                 */
-
-
-
+}
+/*          DE AQUI PA ARRIBA NO SE QUE HIZO EL GEOVANY                 */
 
 /* modificacion del estilo */
 .fuente{
-    color: #8b2437;
+    color: var(--color-primary);
     align-items: center;
     text-align: center;
 
@@ -38,28 +46,47 @@ form {
 /* estilo del el usuario y contraseña */
 .sesion{
   border: none;
-  border-bottom: 2px solid black;
-  border-color: #8b2437;
+  border-bottom: 0.5vh solid black;
+  border-color: var(--color-primary);
+  margin-top: 10%;
+  color: var(--color-primary);
+  font-size: 1rem;
+  outline: none;
+  width: 80%;
+  transition: 0.2s ease;
+}
+.sesion:active, .sesion:focus{
+    width: 100%;
+    font-size: 1.2rem;
 }
 
 /* estilo del texto de ayuda para el usuario */
 input::placeholder{
-    color: #8b2437;
-   
+    color: var(--color-primary);
 }
 /* estilo de lo botones */
 .boton {
-    background-color: #8b2437;
-    color: white;
-    border: none;
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    border: 1vh solid var(--color-primary);
     border-radius: 10px;
-    margin-top: 20%;
+    margin-top: 10%;
+    padding: 2%;
+    height: auto;
+    font-size: 1rem;
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
+    transition: 1s;
     
 }
+.boton:hover {
+    scale: 1.1;
+    color: var(--color-primary);
+    background-color: var(--color-background);
+    transition: 1s;
+}
+
 
 /* estilo del boton ingresar */
-}
-input, .boton {
-    height: 5vh;
-    margin-top: 2%;
-}
