--- a/integradora/styles/tablas.css
+++ b/integradora/styles/tablas.css
@@ -10,11 +10,16 @@
     --color-brown: #A65C3D;
     --color-black: #000000;
 }
+main {
+    padding: 2%;
+}
 
 table {
     width: 90%;
     margin: 10% auto;
     border-collapse: collapse;
+    font-size: 1rem;
+    border: 1px solid var(--color-primary);
 }
 th {
     background-color: var(--color-primary);
@@ -43,20 +48,24 @@ tr:nth-child(even){
 
 .B_editar{
     background-color: var(--color-secondary);
-    padding: 3% 10%;
+    padding: 2% 3%;
+    font-size: 1rem;
     border: 0;
     border-radius: 30px;
     cursor: pointer;
     color: var(--color-white);
     margin-left: 10%;
+    width: 40%;
 }
 .B_eliminar {
     background-color: var(--color-primary);
-    padding: 3% 10%;
+    padding: 2% 3%;
+    font-size: 1rem;
     border: 0;
     border-radius: 30px;
     cursor: pointer;
     color: var(--color-white);
+    width: 40%;
 }
 
 /*seccion busquedas*/
@@ -67,9 +76,12 @@ tr:nth-child(even){
     display: flex;
     flex-direction: row;
     padding: 2%;
+    align-items: center;
 }
 #busquedas input {
     height: 6vh;
+    margin: 0 5%;
+    font-size: 1rem;
 
 }
 
@@ -80,16 +92,79 @@ tr:nth-child(even){
     padding: 2%;
 }
 #Bot_busqueda {
-    width: 10%;
     background-color: var(--color-primary);
     color: #F2E4D6;
     border: 4px solid var(--color-primary);
     border-radius: 30px;
+    padding: 0 3%;
     transition: 0.3s;
     cursor: pointer;
+    
 }
 #Bot_busqueda:hover {
     background-color: var(--color-white);
     color: var(--color-primary);
     transition: 0.3s;
+}
+.select2-container {
+    width: 15% !important;  /* Cambia 300px por el ancho deseado */
+}
+.select2-container--default .select2-selection--single {
+    height: 6vh;  /* Ajusta la altura según sea necesario */
+    line-height: 6vh;  /* Asegura que el texto esté centrado verticalmente */
+    display: flex;
+    align-items: center;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 6vh;
+    display: flex;
+    align-items: center;
+}
+
+/*adaptación*/
+@media (max-width: 701px) {
+    table {
+        width: 100%;
+        margin: 0 0;
+        font-size: 0.7rem;
+    }
+    .acciones {
+        display: flex;
+        flex-direction: column;
+    }
+    .B_editar{
+        width: 90%;
+        margin: 5% auto;
+        font-size: 0.6rem;
+    }
+    .B_eliminar {
+        width: 90%;
+        margin: 5% auto;
+        font-size: 0.6rem;
+    }
+    #busquedas {
+        width: 100%;
+        margin: 3% 0 ;
+        padding: 1%;
+    }
+    .select2-container--default .select2-selection--single {
+        height: 3vh;  /* Ajusta la altura según sea necesario */
+        line-height: 3vh;  /* Asegura que el texto esté centrado verticalmente */
+        display: flex;
+        align-items: center;
+    }
+    .select2-container--default .select2-selection--single .select2-selection__arrow {
+        height: 3vh;
+        display: flex;
+        align-items: center;
+    }
+
+}
+@media (max-width: 430%) {
+    .B_editar{
+        font-size: 0.4rem;
+    }
+    .B_eliminar {
+        font-size: 0.4rem;
+    }
 }
