--- a/integradora/styles/tablas.css
+++ b/integradora/styles/tablas.css
@@ -57,12 +57,15 @@ tr:nth-child(even) {
     padding: 1%;
 }
 .B_editar, .B_eliminar {
-    font-size: 1rem;
+    padding: 1%;
     border: 0;
     border-radius: 30px;
     cursor: pointer;
     color: var(--color-white);
     width: 40%;
+}
+button .material-symbols-outlined {
+    font-size: 1rem;
 }
 
 .B_editar {
