--- a/integradora/styles/style.css
+++ b/integradora/styles/style.css
@@ -19,12 +19,14 @@ body {
     background: linear-gradient(339deg, rgba(139,36,55,1) 0%, rgba(200,80,42,1) 53%, rgba(249,210,121,1) 100%);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     width: 100%;
-    height: 100vh;
+    height: 95vh;
     display: flex;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
-form {
+#login {
     width: 30%;
     height: auto;
     background-color: var(--color-white);
@@ -88,5 +90,14 @@ input::placeholder{
     transition: 1s;
 }
 
+#login a {
+    margin-top: 1%;
+    font-size: 0.7rem;
+    text-align: center;
+}
 
-/* estilo del boton ingresar */
+@media (max-width: 768px) {
+    #login {
+        width: 50%;
+    }
+}
