--- a/integradora/styles/tablas.css
+++ b/integradora/styles/tablas.css
@@ -126,10 +126,11 @@ button .material-symbols-outlined {
 }
 
 #Search_principal {
-    width: 60%; /* Más espacio para el buscador en pantallas grandes */
-    border: 2px solid black;
-    border-radius: 30px;
+    width: 90%; /* Más espacio para el buscador en pantallas grandes */
     padding: 10px;
+    margin-left:1px ;
+    border: 0;
+    font-size: 1rem;
 }
 
 .bot {
@@ -148,7 +149,13 @@ button .material-symbols-outlined {
 .bot span {
     margin-right: 10%;
 }
+.botS {
+    background-color: transparent;
+    border: 0;
+    border-left: 1px solid var(--color-gray-dark);
+    padding: 2%;
 
+}
 .bot:hover {
     background-color: var(--color-white);
     color: var(--color-primary);
@@ -164,6 +171,7 @@ button .material-symbols-outlined {
     line-height: 5vh;
     display: flex;
     align-items: center;
+    border: 0;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
@@ -172,6 +180,15 @@ button .material-symbols-outlined {
     align-items: center;
 }
 
+#barra_busqueda {
+    background-color: var(--color-white);
+    width: 60%;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: row;
+    padding: 1% 3%;
+    align-items: center;
+}
 
 /*tabla clientes*/
 #ver_direccion {
@@ -216,7 +233,7 @@ button .material-symbols-outlined {
         flex-direction: column; /* Cambiar a columna para que se adapten bien los elementos */
     }
 
-    #Search_principal {
+    #barra_busqueda {
         width: 80%; /* Dar más espacio al buscador en pantallas pequeñas */
         margin: 10px 0;
     }
@@ -225,11 +242,6 @@ button .material-symbols-outlined {
         padding: 5px 8px;
         font-size: 0.8rem;
         margin: 5px auto;
-    }
-
-    .select2-container {
-        width: 100% !important; /* Ocupa todo el ancho en pantallas pequeñas */
-        margin-bottom: 10px;
     }
 
     .select2-container--default .select2-selection--single {
@@ -260,7 +272,7 @@ button .material-symbols-outlined {
         width: 100%; /* Asegurar que los botones ocupen el 100% del ancho */
     }
 
-    #Search_principal {
-        width: 100%; /* Ocupa todo el ancho en pantallas muy pequeñas */
+    #barra_busqueda {
+        width: 95%; /* Ocupa todo el ancho en pantallas muy pequeñas */
     }
 }
