--- a/integradora/styles/formularios.css
+++ b/integradora/styles/formularios.css
@@ -13,40 +13,35 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; /* Asegura que padding y border no alteren el tamaño de los elementos */
 }
 
-body {
-    background: rgb(139,36,55);
-    background: linear-gradient(339deg, rgba(139,36,55,1) 0%, rgba(200,80,42,1) 53%, rgba(249,210,121,1) 100%);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    height: 100vh; /* Ajuste de altura para cubrir toda la pantalla */
-    display: flex;
+
+#Popup {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6 );
+    height: 100vh;
+    display: none;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
+    position: fixed;
 }
 
-main {
+.modificacion {
     width: 80%;
-    border-radius: 30px;
-    background-color: var(--color-background);
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1); /* Sombra para darle profundidad */
-    padding: 2% 5%;
-    height: auto;
-    margin: 1% auto;
-}
-
-form {
     display: grid;
     grid-template-columns: repeat(12, 1fr); /* 12 columnas de ancho */
     gap: 1rem; /* Espacio entre elementos */
+    background-color: var(--color-background);
+    border-radius: 30px;
+    padding: 1%;
+    overflow-y: auto;
+
+
 }
 
-h2 {
-    grid-column: span 12; /* Título ocupa todo el ancho */
+.modificacion h2 {
+    grid-column: span 11; 
     margin-bottom: 0.1rem;
     text-align: center;
 }
@@ -74,43 +69,72 @@ h2 {
     grid-column: span 3; /* Ocupa un cuarto del ancho */
 }
 
-input[required], select[required] {
-    border: 2px solid var(--color-primary); /* Borde de los campos obligatorios */
-    background-color: #fff5f5; /* Fondo ligeramente rojo */
-}
-
-label::after {
-    content: " *";
-    color: var(--color-primary); /* Asterisco rojo para los campos obligatorios */
-}
-
-input, button {
-    width: 100%;
+.modificacion input, .modificacion button, .modificacion select {
     padding: 0.75rem;
     font-size: 1rem;
     border-radius: 0.5rem; /* Bordes redondeados */
     border: 1px solid #ccc; /* Borde general */
     margin-bottom: 1rem; /* Espacio entre los campos */
+    
+}
+.modificacion select:disabled {
+    color: #ccc;
 }
 
-button {
+.modificacion button {
     background-color: var(--color-primary);
     color: var(--color-white);
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
-button:hover {
+.modificacion button:hover {
     background-color: var(--color-danger);
 }
 
-input[type="submit"] {
+#salirP {
+    all: unset;
+    cursor: pointer;
+    font-weight: bold;
+}
+#salirP:hover {
+    color: var(--color-primary);
+}
+
+.modificacion input[type="submit"] {
     background-color: var(--color-primary);
     color: var(--color-white);
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
-input[type="submit"]:hover {
+.modificacion input[type="submit"]:hover {
     background-color: var(--color-danger);
 }
+
+.modificacion .select2-container {
+    width: 100% !important; /* Aseguramos que el select ocupe todo el ancho disponible */
+}
+.modificacion .select2-container .select2-selection--single {
+    height: auto; /* Ajuste de altura */
+    padding: 0.75rem; 
+    border-radius: 0.5rem; /* Bordes redondeados */
+    border: 1px solid var(--color-gray-dark); /* Borde acorde a tu esquema de colores */
+    font-size: 1rem;
+}
+
+.modificacion .select2-container .select2-selection--single .select2-selection__rendered {
+    color: var(--color-black); /* Texto en el select */
+}
+
+.modificacion .select2-container--default .select2-selection--single:hover {
+    border-color: var(--color-secondary); /* Borde al pasar el cursor */
+}
+
+/* Ocultar el scrollbar en navegadores basados en WebKit (Chrome, Safari) */
+#Popup form::-webkit-scrollbar {
+    width: 0px;
+}
+
+
+/*media 530*/
