--- a/integradora/styles/lateral.css
+++ b/integradora/styles/lateral.css
@@ -36,9 +36,6 @@ aside {
   border-radius: 10px;
   align-items: center;
 }
-.material-symbols-outlined {
-  font-size: 2rem;
-}
 
 aside nav {
   display: flex;
@@ -73,22 +70,38 @@ li .selected:hover {
   transition: 0.5s;
 }
 .tooltip {
-  display: none; /* Ocultar por defecto */
+  display: none; 
   position: absolute;
+  top: 50%; 
+  left: 100%; 
+  transform: translateY(-50%); 
   background-color: rgba(0, 0, 0, 0.7);
   color: white;
   padding: 5px;
-  margin: 100%;
+  margin-left: 5px; 
   border-radius: 4px;
   font-size: 0.9rem;
   z-index: 100;
 }
 
+
+
 a.lateral {
   position: relative; /* Posición relativa para posicionar el tooltip */
 }
+#user {
+  position: relative; /* Necesario para posicionar el tooltip */
+  background-color: transparent;
+  border: 0;
+  color: white;
+  cursor: pointer;
+}
 
-a.lateral:hover .tooltip {
+#user:hover .tooltip {
+  display: block; /* Mostrar el tooltip al pasar el cursor */
+}
+
+.lateral:hover .tooltip {
   display: block; /* Mostrar el tooltip al pasar el cursor */
 }
 
@@ -101,8 +114,5 @@ a.lateral:hover .tooltip {
 
   aside {
       width: 7%; /* Hacer que la barra lateral ocupe todo el ancho */
-}
-.material-symbols-outlined {
-  font-size: 1.5rem;
 }
 }
