--- a/integradora/styles/tablas.css
+++ b/integradora/styles/tablas.css
@@ -8,6 +8,7 @@
     --color-background: #F2E4D6;
     --color-brown: #A65C3D;
     --color-black: #000000;
+    --color-green: #36b932;
 }
 body {
     background: rgb(139,36,55);
@@ -44,7 +45,7 @@ th {
 }
 
 td {
-    padding-top: 1% 0;
+    width: auto;
     text-align: center;
     border-right: 1px solid var(--color-primary);
 }
@@ -75,7 +76,7 @@ tr:last-child td:last-child {
 }
 
 .positive {
-    color: rgb(54, 185, 54);
+    color: var(--color-green);
 }
 
 .acciones {
@@ -105,8 +106,11 @@ tr:last-child td:last-child {
 .B_eliminar:hover {
     color: var(--color-primary);
 }
-button .material-symbols-outlined {
+table button .material-symbols-outlined {
     font-size: 1rem;
+}
+#busquedas button .material-symbols-outlined {
+    font-size: 1.5rem;
 }
 
 .B_editar {
@@ -142,13 +146,14 @@ button .material-symbols-outlined {
     flex-direction: row;
     background-color: var(--color-primary);
     color: var(--color-white);
-    border: 2px solid var(--color-primary); /* Reducir grosor del borde */
+    border: 2px solid var(--color-primary);
     border-radius: 30px;
-    padding: 5px 10px; /* Reducir el tamaño del botón */
-    font-size: 0.9rem; /* Reducir un poco el tamaño de la fuente */
+    padding: 5px 10px;
+    font-size: 0.9rem; 
     transition: 0.3s;
     cursor: pointer;
-    margin: 5px 5px; /* Ajuste de margen */
+    margin: 5px 5px;
+    align-items: center;
 }
 .bot span {
     margin-right: 10%;
@@ -157,7 +162,8 @@ button .material-symbols-outlined {
     background-color: transparent;
     border: 0;
     border-left: 1px solid var(--color-gray-dark);
-    padding: 2%;
+    padding: 1%;
+    cursor: pointer;
 
 }
 .bot:hover {
@@ -195,8 +201,8 @@ button .material-symbols-outlined {
 }
 
 /*tabla clientes*/
-#ver_direccion {
-    width: 50%;
+.ver {
+    width: 70%;
     height: auto;
     border: 1px solid #5095d0;
     border-radius: 3px;
@@ -205,7 +211,7 @@ button .material-symbols-outlined {
     cursor: pointer;
     text-decoration: none;
 }
-#ver_direccion:hover {
+.ver:hover {
     color: var(--color-white);
     background: #5095d0;
     transition: 0.5s;
