--- a/integradora/styles/tablas.css
+++ b/integradora/styles/tablas.css
@@ -201,9 +201,40 @@ table button .material-symbols-outlined {
     align-items: center;
 }
 
+/* paginacion */
+.pagination-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination-button {
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    border: 1px solid var(--color-primary);
+    border-radius: 5px;
+    margin: 0 5px;
+    padding: 8px 12px;
+    font-size: 0.9rem;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.pagination-button:hover {
+    background-color: var(--color-white);
+    color: var(--color-primary);
+}
+
+.pagination-button.active {
+    background-color: var(--color-secondary);
+    color: var(--color-white);
+    font-weight: bold;
+}
+
+
 /*tabla clientes*/
 .ver {
-    width: 70%;
+    padding: 0 20%;
     height: auto;
     border: 1px solid #5095d0;
     border-radius: 3px;
@@ -239,7 +270,7 @@ table button .material-symbols-outlined {
         display: block;
         overflow-x: auto;
     }
-    #zonas {
+    #zonas, #productos {
         display: table;
     }
 
